added welcome page

--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
 <script src="https://unpkg.com/react-router-dom/umd/react-router-dom.min.js"></script>
 <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
-<script src="js/page/welcome/Welcome.js" type="text/babel"></script>
-<script src="js/page/bid/Bid.js" type="text/babel"></script>
+<script src="js/controller/ProductInitializer.js"></script>
+<script src="js/controller/BidController.js"></script>
+<script src="js/controller/WelcomeController.js"></script>
+<script src="js/directive/WelcomeForm.js" type="text/babel"></script>
+<script src="js/page/Welcome.js" type="text/babel"></script>
+<script src="js/page/Bid.js" type="text/babel"></script>
 <script src="js/app.js" type="text/babel"></script>
 
 <div id="root"></div>
